[tool.poetry]
name = "eth-analytics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "eth_analytics"}]

[tool.poetry.dependencies]
python = "3.9.17"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
pandas = "^2.0.3"
ujson = "^5.8.0"
requests = "^2.31.0"
web3 = "^6.8.0"
jupyterlab = "^4.0.4"
jupyterlab-vim = "^4.0.2"
tqdm = "^4.65.2"
pyarrow = "^12.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
